--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <html lang="en">
 
-<head>
+<head profile="http://www.w3.org/2005/10/profile">
   <meta charset="utf-8">
 
   <title>Julio Cesar Martin - Personal website</title>
   <meta name="description" content="Julio Cesar Martin - Personal website">
   <meta name="juliomatcom" content="Personal website">
-
+  <link rel="icon" type="image/png" href="ico.png">
   <style media="screen" type="text/css">
     body {
       width: 100%;
