--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
       "Work" : [
         "2016/03-Present : Javascript Dev @ BBVA",
         "2016/01-2016/06 : Nodejs Arquitect @ Barzlive",
-        "2015/07-2016/02 : Full Stack @ Kimia",
-        "2014/04-2015/07 : Full Stack @ Esocial Technologies",
+        "2015/07-2016/02 : Full Stack Dev @ Kimia",
+        "2014/04-2015/07 : Full Stack Dev @ Esocial Technologies",
         "2012/09-2015/01 : Founder listascuba.com"
       ],
       "School": {
