add end date for BBVA

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       "Github": "https://github.com/juliomatcom",
       "Status": "Busy with OSS and Javascript/NodeJS",
       "Work" : [
-        "2016/03-Present : Javascript Dev @ BBVA",
+        "2016/03-2017/07 : Javascript Dev @ Beeva - BBVA",
         "2016/01-2016/06 : Nodejs Arquitect @ Barzlive",
         "2015/07-2016/02 : Full Stack Dev @ Kimia",
         "2014/04-2015/07 : Full Stack Dev @ Esocial Technologies",
