change location, fix typo

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
   <script>
     var cv = {
       "Name": "Julio Cesar Martin",
-      "Headline": "Full Stack Developer",
-      "Location": "Madrid, Spain",
+      "Headline": "Full-Stack Developer",
+      "Location": "Barcelona, Spain",
       "Email": "julio@julces.com",
       "Github": "https://github.com/juliomatcom",
       "Status": "Busy with OSS and Javascript/NodeJS",
