--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <body>
   <textarea rows="24" class="resume" readonly></textarea>
   <div class="info">
-    <a href="#">Blog</a>
+    <a href="https://medium.com/@juliomatcom">Blog (medium)</a>
     <a href="https://www.linkedin.com/in/juliomatcom/">Longer resume</a>
   </div>
 
