--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       -moz-box-sizing: border-box;
       box-sizing: border-box;
       width: 100%;
+      height: 80vh;
       border: 0px;
       padding: 20px;
       line-height: 1.5em;
