--- a/index.html
+++ b/index.html
@@ -52,11 +52,12 @@
     var cv = {
       "Name": "Julio Cesar Martin",
       "Headline": "Full-Stack Developer",
-      "Location": "Barcelona, Spain",
+      "Location": "Madrid, Spain",
       "Email": "julio@julces.com",
       "Github": "https://github.com/juliomatcom",
       "Status": "Busy with OSS and Javascript/NodeJS",
       "Work" : [
+        "2017/07-Today : Full-Stack Consultant Dev @ Amaris",
         "2016/03-2017/07 : Javascript Dev @ Beeva - BBVA",
         "2016/01-2016/06 : Nodejs Arquitect @ Barzlive",
         "2015/07-2016/02 : Full-Stack Dev @ Kimia",
