--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       "Name": "Julio Cesar Martin",
       "Headline": "Full-Stack Developer",
       "Location": "Madrid, Spain",
-      "Email": "julio@julces.com",
+      "Email": "juliomatcom[at]gmail.com",
       "Github": "https://github.com/juliomatcom",
       "Status": "Busy with OSS and Javascript/NodeJS",
       "Work" : [
