--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
 <body>
   <textarea rows="24" class="resume" readonly></textarea>
+  <noscript><h2>Please turn on script support in your browser.</h2></noscript>
   <div class="info">
     <a href="https://medium.com/@juliomatcom">Blog (medium)</a>
     <a href="https://www.linkedin.com/in/juliomatcom/">Longer resume</a>
