--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       "Github": "https://github.com/juliomatcom",
       "Status": "Busy with OSS and Javascript/NodeJS",
       "Work" : [
+        "2020/01-Today : Architect & CTO @ TopDividendos",
         "2017/07-Today : Full-Stack Consultant Dev @ Amaris",
         "2016/03-2017/07 : Javascript Dev @ Beeva - BBVA",
         "2016/01-2016/06 : Nodejs Arquitect @ Barzlive",
