--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
       "Github": "https://github.com/juliomatcom",
       "Status": "Busy with OSS and Javascript/NodeJS",
       "Work" : [
-        "2020/01-Today : Architect & CTO @ TopDividendos",
-        "2017/07-Today : Full-Stack Consultant Dev @ Amaris",
+        "2020/01-Today : Architect & Cofounder @ TopDividendos",
+        "2017/07-2020/05 : Full-Stack Consultant Dev @ Amaris",
         "2016/03-2017/07 : Javascript Dev @ Beeva - BBVA",
         "2016/01-2016/06 : Nodejs Arquitect @ Barzlive",
         "2015/07-2016/02 : Full-Stack Dev @ Kimia",
